# RegionLens

./: .dockerignore  .dvcignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vitest.config.js
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.prod  manage.py
backend/config/: asgi.py  observability.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  apps.py  audit.py  cabinet.py  context_processors.py  duck.py  forms.py  health.py  middleware.py  models.py  permissions.py  queries.py  reports.py  serializers.py  signals.py  urls.py  views.py
backend/core/api/: __init__.py  authentication.py  endpoints.py  exceptions.py  schema.py  urls.py
backend/core/management/commands/: build_region_geojson.py  cleanup_exports.py  prune_audit_log.py  refresh_data.py  seed_demo.py  setup_roles.py
backend/core/migrations/: 0001_initial.py  0002_savedview_share_token.py  0003_favorite.py  0004_comparisonset.py  0005_userprofile_default_measure_and_more.py  0006_userprofile_api_token_userprofile_last_region_okato.py  0007_alter_userprofile_api_token.py  0008_alter_exportjob_fmt.py
backend/locale/en/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
backend/static/css/: app.css
backend/static/geo/: regions.geojson
backend/static/js/: anomalies.js  auth.js  compare.js  convergence.js  correlations.js  data_quality.js  dispersion.js  explore.js  index_builder.js  index_lab.js  map.js  models.js  rank_stability.js  rankings.js  region.js  rl-common.js  scenario.js  search.js  spatial.js  typology.js
backend/templates/: base.html
backend/templates/account/: _tabs.html  activity.html  api_access.html  comparisons.html  exports.html  favorites.html  overview.html  password.html  password_done.html  profile.html  saved_views.html  settings.html
backend/templates/pages/: _data_tabs.html  _rankings_tabs.html  anomalies.html  compare.html  convergence.html  correlations.html  data.html  data_quality.html  dispersion.html  explore.html  feedback.html  help.html  home.html  index_builder.html  index_lab.html  map.html  methodology.html  models.html  rank_stability.html  rankings.html  region.html  regions.html  scenario.html  spatial.html  typology.html
backend/templates/partials/: _breadcrumbs.html  _empty.html
backend/templates/registration/: login.html  register.html
config/: analytics.yaml  indicators.yaml  regions.yaml  sources.yaml  value_types.yaml  weights.yaml
data/: regionlens.duckdb
data/raw/: .gitignore  data_regions_collection_102_v20260313.parquet.dvc
deploy/backup/: pg_backup.sh
deploy/grafana/provisioning/datasources/: prometheus.yml
deploy/nginx/: nginx.conf  nginx.conf.template
deploy/prometheus/: prometheus.yml
deploy/systemd/: regionlens-backup.service  regionlens-backup.timer  regionlens-cleanup.service  regionlens-cleanup.timer  regionlens-refresh.path  regionlens-refresh.service
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  DEPLOY.md  MODELS.md
docs/security/: security_review.md
docs/testing/: load_test_report.md  test_cases.md  test_plan.md
examples/: README.md  api_quickstart.ipynb
models/: anomaly_detector.json  model1.joblib  model2.joblib  typology_classifier.json
pipeline/: __init__.py  anomalies.py  anomaly_model.py  beta_convergence.py  config.py  contracts.py  correlations.py  data_quality.py  dev_index.py  dispersion.py  duck.py  etl.py  features.py  index_decomposition.py  index_dispersion.py  logging_setup.py  metric_catalog.py  models_io.py  rank_robustness.py  rank_stability.py  refresh.py  run_all.py  scheme_agreement.py  spatial.py  transitions.py  twins.py  typology.py  typology_model.py  validation.py
pipeline/ingestion/: __init__.py  base.py  rosstat_collection.py
tests/: conftest.py  test_accessibility.py  test_admin.py  test_anomalies.py  test_anomaly_model.py  test_api.py  test_api_throttling.py  test_api_token.py  test_api_versioning.py  test_audit.py  test_auth.py  test_beta_convergence.py  test_build_geojson_command.py  test_cabinet.py  test_cleanup_exports.py  test_correlations.py  test_custom_index.py  test_data_profile.py  test_data_quality.py  test_dev_index.py  test_dispersion.py  test_duck.py  test_etl_dedup.py  test_export.py  test_features.py  test_geojson_build.py  test_health.py  test_i18n.py  test_index_builder_page.py  test_index_decomposition.py  test_index_dispersion.py  test_ingestion.py  test_level_filter.py  test_metric_catalog.py  test_metric_id.py  test_models.py  test_models_io.py  test_models_page.py  test_models_predict.py  test_observability.py  (+23 more)
tests/e2e/: conftest.py  test_chart_export.py  test_dispersion_combo.py  test_header_stability.py  test_home_onboarding.py  test_rankings_map_hover.py  test_region_dashboard.py  test_search_hotkeys.py  test_smoke_pages.py  test_theme_rankings.py
tests/js/: copy-link.test.js  region-map.test.js  rl-common.test.js
tests/js/helpers/: load-script.js
tests/load/: locustfile.py
