[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "regionlens"
version = "0.1.0"
description = "RegionLens — BI-платформа анализа социально-экономических показателей регионов РФ (данные Росстата)."
requires-python = ">=3.12"
dependencies = [          # общее ядро (нужно и конвейеру, и приложению)
  "polars>=1.0",
  "duckdb>=1.0",
  "pyarrow>=16.0",        # арроу-интероп polars↔DuckDB (запись/чтение таблиц)
  "pyyaml>=6.0",
  "structlog>=24.1",
]

[project.optional-dependencies]
pipeline = [              # офлайн-конвейер: аналитика/ML
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "sktime>=0.30",
  "shap>=0.45",
  "mapie>=0.8",
  "ruptures>=1.1",
  "mlflow>=2.13",
  "joblib>=1.4",
  "pandera>=0.20",
  "dvc>=3.50",
]
backend = [               # Django + DRF + операционные зависимости
  "django>=5.0,<6.0",
  "djangorestframework>=3.15",
  "django-environ>=0.11",
  "drf-spectacular>=0.27",
  "psycopg[binary]>=3.1",
  "openpyxl>=3.1",
  "python-docx>=1.1",
]
dev = [                   # инструменты разработки
  "pytest>=8.2",
  "pytest-django>=4.8",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "httpx>=0.27",
]

[tool.setuptools]
# Дистрибутивный пакет — только конвейер. Django-проект (config/core) пакетом не
# ставится: он запускается через manage.py / main.py и доступен по pythonpath.
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["migrations/"]

# Сторонние библиотеки без type-стабов — не считаем ошибкой отсутствие типов.
[[tool.mypy.overrides]]
module = [
  "duckdb.*", "polars.*", "structlog.*", "environ.*", "yaml.*",
  "django.*", "rest_framework.*", "drf_spectacular.*",
  "pandas.*", "sklearn.*", "scipy.*", "statsmodels.*", "sktime.*",
  "shap.*", "mapie.*", "ruptures.*", "mlflow.*", "joblib.*", "pandera.*",
  "openpyxl.*", "docx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
# Порядок важен: backend/ перед корнем, чтобы пакет `config` (Django) имел приоритет
# над одноимённым каталогом config/ с YAML (он не является Python-пакетом).
pythonpath = ["backend", "."]
addopts = "-q"
